// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lightning-base-combobox is accessible renders alternative text for icon 1`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-autocomplete="none"
          aria-controls="dropdown-element-68"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          id="input-68"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
              <span
                class="slds-assistive-text"
              >
                Alternative Icon Text
              </span>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-68"
        role="listbox"
      />
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox renders properly can be disabled 1`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-autocomplete="none"
          aria-controls="dropdown-element-12"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          disabled=""
          id="input-12"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-12"
        role="listbox"
      />
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox renders properly renders correctly an "option-card" item with all attributes 1`] = `
<lightning-base-combobox-item
  aria-selected="true"
  class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity slds-has-focus"
  data-item-id="input-4-0"
  data-value="accountGlobalMedia"
  id="input-4-0-4"
  role="option"
>
  #shadow-root(open)
    <span
      class="slds-media__figure"
    >
      <lightning-icon
        class="slds-icon-standard-account slds-icon_container"
      >
        #shadow-root(open)
          <lightning-primitive-icon>
            #shadow-root(open)
              <svg
                aria-hidden="true"
                class="slds-icon slds-icon_large"
                data-key="account"
                focusable="false"
              >
                <use
                  xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                />
              </svg>
          </lightning-primitive-icon>
          <span
            class="slds-assistive-text"
          >
            Account icon
          </span>
      </lightning-icon>
    </span>
    <span
      class="slds-media__body"
    >
      <span
        class="slds-listbox__option-text slds-listbox__option-text_entity"
      >
        <span
          class="slds-truncate"
          title="Global Media"
        >
          Global Media
        </span>
      </span>
      <span
        class="slds-listbox__option-meta slds-listbox__option-meta_entity"
      >
        <span
          class="slds-truncate"
          title="(905) 555-1212"
        >
          (905) 555-1212
        </span>
      </span>
    </span>
    <span
      class="slds-media__figure slds-media__figure_reverse"
    >
      <lightning-icon
        class="slds-icon-utility-chevronright slds-icon_container"
      >
        #shadow-root(open)
          <lightning-primitive-icon>
            #shadow-root(open)
              <svg
                aria-hidden="true"
                class="slds-icon slds-icon-text-default slds-icon_large"
                data-key="chevronright"
                focusable="false"
              >
                <use
                  xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                />
              </svg>
          </lightning-primitive-icon>
          <span
            class="slds-assistive-text"
          >
            Chevron icon
          </span>
      </lightning-icon>
    </span>
</lightning-base-combobox-item>
`;

exports[`lightning-base-combobox renders properly with dropdown open 1`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click slds-is-open"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-activedescendant="input-15-0-15"
          aria-autocomplete="none"
          aria-controls="dropdown-element-15"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          id="input-15"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-15"
        role="listbox"
      >
        <lightning-base-combobox-item
          aria-selected="true"
          class="slds-media slds-listbox__option slds-media_center slds-media_small slds-listbox__option_plain slds-has-focus"
          data-item-id="input-15-0"
          data-value="actionSearchAdvanced"
          id="input-15-0-15"
          role="option"
        >
          #shadow-root(open)
            <span
              class="slds-media__figure slds-listbox__option-icon"
            >
              <lightning-icon
                class="slds-icon-utility-search slds-icon_container"
              >
                #shadow-root(open)
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-icon slds-icon-text-default slds-icon_x-small"
                        data-key="search"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                        />
                      </svg>
                  </lightning-primitive-icon>
              </lightning-icon>
            </span>
            <span
              class="slds-media__body"
            >
              <span
                class="slds-truncate"
                title="Advanced Search..."
              >
                Advanced Search...
              </span>
            </span>
        </lightning-base-combobox-item>
        <lightning-base-combobox-item
          aria-selected="false"
          class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
          data-item-id="input-15-1"
          data-value="accountGlobalMedia"
          id="input-15-1-15"
          role="option"
        >
          #shadow-root(open)
            <span
              class="slds-media__figure"
            >
              <lightning-icon
                class="slds-icon-standard-account slds-icon_container"
              >
                #shadow-root(open)
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-icon slds-icon_small"
                        data-key="account"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                  </lightning-primitive-icon>
              </lightning-icon>
            </span>
            <span
              class="slds-media__body"
            >
              <span
                class="slds-listbox__option-text slds-listbox__option-text_entity"
              >
                <span
                  class="slds-truncate"
                  title="Global Media"
                >
                  Global Media
                </span>
              </span>
              <span
                class="slds-listbox__option-meta slds-listbox__option-meta_entity"
              >
                <span
                  class="slds-truncate"
                  title="(905) 555-1212"
                >
                  (905) 555-1212
                </span>
              </span>
            </span>
        </lightning-base-combobox-item>
      </div>
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox renders properly with items 1`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-autocomplete="none"
          aria-controls="dropdown-element-1"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          id="input-1"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-1"
        role="listbox"
      />
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox renders properly with maxlength 1`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-autocomplete="none"
          aria-controls="dropdown-element-24"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          id="input-24"
          maxlength="50"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-24"
        role="listbox"
      />
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox renders properly with showSpinnerActivity, but only if it's set 1`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-autocomplete="none"
          aria-controls="dropdown-element-27"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          id="input-27"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-27"
        role="listbox"
      />
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox renders properly with showSpinnerActivity, but only if it's set 2`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-autocomplete="none"
          aria-controls="dropdown-element-27"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          id="input-27"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-27"
        role="listbox"
      />
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox triggers events triggers closing dropdown with escape key 1`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click slds-is-open"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-activedescendant="input-185-0-185"
          aria-autocomplete="none"
          aria-controls="dropdown-element-185"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          id="input-185"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-185"
        role="listbox"
      >
        <lightning-base-combobox-item
          aria-selected="true"
          class="slds-media slds-listbox__option slds-media_center slds-media_small slds-listbox__option_plain slds-has-focus"
          data-item-id="input-185-0"
          data-value="actionSearchAdvanced"
          id="input-185-0-185"
          role="option"
        >
          #shadow-root(open)
            <span
              class="slds-media__figure slds-listbox__option-icon"
            >
              <lightning-icon
                class="slds-icon-utility-search slds-icon_container"
              >
                #shadow-root(open)
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-icon slds-icon-text-default slds-icon_x-small"
                        data-key="search"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                        />
                      </svg>
                  </lightning-primitive-icon>
              </lightning-icon>
            </span>
            <span
              class="slds-media__body"
            >
              <span
                class="slds-truncate"
                title="Advanced Search..."
              >
                Advanced Search...
              </span>
            </span>
        </lightning-base-combobox-item>
        <lightning-base-combobox-item
          aria-selected="false"
          class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
          data-item-id="input-185-1"
          data-value="accountGlobalMedia"
          id="input-185-1-185"
          role="option"
        >
          #shadow-root(open)
            <span
              class="slds-media__figure"
            >
              <lightning-icon
                class="slds-icon-standard-account slds-icon_container"
              >
                #shadow-root(open)
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-icon slds-icon_small"
                        data-key="account"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                  </lightning-primitive-icon>
              </lightning-icon>
            </span>
            <span
              class="slds-media__body"
            >
              <span
                class="slds-listbox__option-text slds-listbox__option-text_entity"
              >
                <span
                  class="slds-truncate"
                  title="Global Media"
                >
                  Global Media
                </span>
              </span>
              <span
                class="slds-listbox__option-meta slds-listbox__option-meta_entity"
              >
                <span
                  class="slds-truncate"
                  title="(905) 555-1212"
                >
                  (905) 555-1212
                </span>
              </span>
            </span>
        </lightning-base-combobox-item>
      </div>
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox triggers events triggers closing dropdown with escape key 2`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-autocomplete="none"
          aria-controls="dropdown-element-185"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          id="input-185"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-185"
        role="listbox"
      >
        <lightning-base-combobox-item
          aria-selected="false"
          class="slds-media slds-listbox__option slds-media_center slds-media_small slds-listbox__option_plain"
          data-item-id="input-185-0"
          data-value="actionSearchAdvanced"
          id="input-185-0-185"
          role="option"
        >
          #shadow-root(open)
            <span
              class="slds-media__figure slds-listbox__option-icon"
            >
              <lightning-icon
                class="slds-icon-utility-search slds-icon_container"
              >
                #shadow-root(open)
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-icon slds-icon-text-default slds-icon_x-small"
                        data-key="search"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                        />
                      </svg>
                  </lightning-primitive-icon>
              </lightning-icon>
            </span>
            <span
              class="slds-media__body"
            >
              <span
                class="slds-truncate"
                title="Advanced Search..."
              >
                Advanced Search...
              </span>
            </span>
        </lightning-base-combobox-item>
        <lightning-base-combobox-item
          aria-selected="false"
          class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
          data-item-id="input-185-1"
          data-value="accountGlobalMedia"
          id="input-185-1-185"
          role="option"
        >
          #shadow-root(open)
            <span
              class="slds-media__figure"
            >
              <lightning-icon
                class="slds-icon-standard-account slds-icon_container"
              >
                #shadow-root(open)
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-icon slds-icon_small"
                        data-key="account"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                  </lightning-primitive-icon>
              </lightning-icon>
            </span>
            <span
              class="slds-media__body"
            >
              <span
                class="slds-listbox__option-text slds-listbox__option-text_entity"
              >
                <span
                  class="slds-truncate"
                  title="Global Media"
                >
                  Global Media
                </span>
              </span>
              <span
                class="slds-listbox__option-meta slds-listbox__option-meta_entity"
              >
                <span
                  class="slds-truncate"
                  title="(905) 555-1212"
                >
                  (905) 555-1212
                </span>
              </span>
            </span>
        </lightning-base-combobox-item>
      </div>
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox triggers events triggers open dropdown on keyboard input for standard variant 1`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click slds-is-open"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-activedescendant="input-167-0-167"
          aria-autocomplete="none"
          aria-controls="dropdown-element-167"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          id="input-167"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-167"
        role="listbox"
      >
        <lightning-base-combobox-item
          aria-selected="true"
          class="slds-media slds-listbox__option slds-media_center slds-media_small slds-listbox__option_plain slds-has-focus"
          data-item-id="input-167-0"
          data-value="actionSearchAdvanced"
          id="input-167-0-167"
          role="option"
        >
          #shadow-root(open)
            <span
              class="slds-media__figure slds-listbox__option-icon"
            >
              <lightning-icon
                class="slds-icon-utility-search slds-icon_container"
              >
                #shadow-root(open)
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-icon slds-icon-text-default slds-icon_x-small"
                        data-key="search"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                        />
                      </svg>
                  </lightning-primitive-icon>
              </lightning-icon>
            </span>
            <span
              class="slds-media__body"
            >
              <span
                class="slds-truncate"
                title="Advanced Search..."
              >
                Advanced Search...
              </span>
            </span>
        </lightning-base-combobox-item>
        <lightning-base-combobox-item
          aria-selected="false"
          class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
          data-item-id="input-167-1"
          data-value="accountGlobalMedia"
          id="input-167-1-167"
          role="option"
        >
          #shadow-root(open)
            <span
              class="slds-media__figure"
            >
              <lightning-icon
                class="slds-icon-standard-account slds-icon_container"
              >
                #shadow-root(open)
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-icon slds-icon_small"
                        data-key="account"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                  </lightning-primitive-icon>
              </lightning-icon>
            </span>
            <span
              class="slds-media__body"
            >
              <span
                class="slds-listbox__option-text slds-listbox__option-text_entity"
              >
                <span
                  class="slds-truncate"
                  title="Global Media"
                >
                  Global Media
                </span>
              </span>
              <span
                class="slds-listbox__option-meta slds-listbox__option-meta_entity"
              >
                <span
                  class="slds-truncate"
                  title="(905) 555-1212"
                >
                  (905) 555-1212
                </span>
              </span>
            </span>
        </lightning-base-combobox-item>
      </div>
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox with a pill should render a pill when a pill is set 1`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_left-right"
        role="none"
      >
        <lightning-icon
          class="slds-icon-standard-account slds-icon_container slds-combobox__input-entity-icon"
        >
          #shadow-root(open)
            <lightning-primitive-icon>
              #shadow-root(open)
                <svg
                  aria-hidden="true"
                  class="slds-icon slds-icon_x-small"
                  data-key="account"
                  focusable="false"
                >
                  <use
                    xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                  />
                </svg>
            </lightning-primitive-icon>
            <span
              class="slds-assistive-text"
            >
              Account
            </span>
        </lightning-icon>
        <input
          aria-controls="dropdown-element-42"
          autocomplete="off"
          class="slds-input slds-combobox__input slds-combobox__input-value"
          id="input-42"
          placeholder="Some Choice"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <button
            class="slds-button slds-button_icon slds-input__icon slds-input__icon_right"
            title="Clear Selection"
            type="button"
          >
            <lightning-primitive-icon>
              #shadow-root(open)
                <svg
                  aria-hidden="true"
                  class="slds-button__icon"
                  data-key="close"
                  focusable="false"
                >
                  <use
                    xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                  />
                </svg>
            </lightning-primitive-icon>
            <span
              class="slds-assistive-text"
            >
              Clear Selection
            </span>
          </button>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-42"
        role="listbox"
      />
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox with empty items will not open empty dropdown 1`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-autocomplete="none"
          aria-controls="dropdown-element-30"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          id="input-30"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-30"
        role="listbox"
      />
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox with items supports groups 1`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click slds-is-open"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-activedescendant="input-77-5-77"
          aria-autocomplete="none"
          aria-controls="dropdown-element-77"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          id="input-77"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-77"
        role="listbox"
      >
        <lightning-base-combobox-item
          aria-selected="false"
          class="slds-media slds-listbox__option slds-media_center slds-media_small slds-listbox__option_plain"
          data-item-id="input-77-0"
          data-value="actionSearchAdvanced"
          id="input-77-0-77"
          role="option"
        >
          #shadow-root(open)
            <span
              class="slds-media__figure slds-listbox__option-icon"
            >
              <lightning-icon
                class="slds-icon-utility-search slds-icon_container"
              >
                #shadow-root(open)
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-icon slds-icon-text-default slds-icon_x-small"
                        data-key="search"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                        />
                      </svg>
                  </lightning-primitive-icon>
              </lightning-icon>
            </span>
            <span
              class="slds-media__body"
            >
              <span
                class="slds-truncate"
                title="Advanced Search..."
              >
                Advanced Search...
              </span>
            </span>
        </lightning-base-combobox-item>
        <ul
          role="group"
        >
          <li
            class="slds-listbox__item"
            role="presentation"
          >
            <lightning-base-combobox-item
              aria-selected="false"
              class="slds-media slds-listbox__option slds-media_center slds-media_small slds-listbox__option_plain"
              data-item-id="input-77-1"
              data-value="actionSearchAdvanced"
              id="input-77-1-77"
              role="option"
            >
              #shadow-root(open)
                <span
                  class="slds-media__figure slds-listbox__option-icon"
                >
                  <lightning-icon
                    class="slds-icon-utility-search slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon-text-default slds-icon_x-small"
                            data-key="search"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </span>
                <span
                  class="slds-media__body"
                >
                  <span
                    class="slds-truncate"
                    title="Advanced Search..."
                  >
                    Advanced Search...
                  </span>
                </span>
            </lightning-base-combobox-item>
          </li>
        </ul>
        <ul
          aria-label="Group 1"
          role="group"
        >
          <li
            class="slds-listbox__item"
            role="presentation"
          >
            <div
              class="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
              role="presentation"
            >
              <h3
                class="slds-text-title_caps"
                role="presentation"
                title="Group 1"
              >
                Group 1
              </h3>
            </div>
          </li>
          <li
            class="slds-listbox__item"
            role="presentation"
          >
            <lightning-base-combobox-item
              aria-selected="false"
              class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
              data-item-id="input-77-2"
              data-value="accountGlobalMedia"
              id="input-77-2-77"
              role="option"
            >
              #shadow-root(open)
                <span
                  class="slds-media__figure"
                >
                  <lightning-icon
                    class="slds-icon-standard-account slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon_small"
                            data-key="account"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </span>
                <span
                  class="slds-media__body"
                >
                  <span
                    class="slds-listbox__option-text slds-listbox__option-text_entity"
                  >
                    <span
                      class="slds-truncate"
                      title="Global Media"
                    >
                      Global Media
                    </span>
                  </span>
                  <span
                    class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                  >
                    <span
                      class="slds-truncate"
                      title="(905) 555-1212"
                    >
                      (905) 555-1212
                    </span>
                  </span>
                </span>
            </lightning-base-combobox-item>
          </li>
          <li
            class="slds-listbox__item"
            role="presentation"
          >
            <lightning-base-combobox-item
              aria-selected="false"
              class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
              data-item-id="input-77-3"
              data-value="accountGlobalMedia"
              id="input-77-3-77"
              role="option"
            >
              #shadow-root(open)
                <span
                  class="slds-media__figure"
                >
                  <lightning-icon
                    class="slds-icon-standard-account slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon_small"
                            data-key="account"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </span>
                <span
                  class="slds-media__body"
                >
                  <span
                    class="slds-listbox__option-text slds-listbox__option-text_entity"
                  >
                    <span
                      class="slds-truncate"
                      title="Global Media"
                    >
                      Global Media
                    </span>
                  </span>
                  <span
                    class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                  >
                    <span
                      class="slds-truncate"
                      title="(905) 555-1212"
                    >
                      (905) 555-1212
                    </span>
                  </span>
                </span>
            </lightning-base-combobox-item>
          </li>
          <li
            class="slds-listbox__item"
            role="presentation"
          >
            <lightning-base-combobox-item
              aria-selected="false"
              class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
              data-item-id="input-77-4"
              data-value="accountGlobalMedia"
              id="input-77-4-77"
              role="option"
            >
              #shadow-root(open)
                <span
                  class="slds-media__figure"
                >
                  <lightning-icon
                    class="slds-icon-standard-account slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon_small"
                            data-key="account"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </span>
                <span
                  class="slds-media__body"
                >
                  <span
                    class="slds-listbox__option-text slds-listbox__option-text_entity"
                  >
                    <span
                      class="slds-truncate"
                      title="Global Media"
                    >
                      Global Media
                    </span>
                  </span>
                  <span
                    class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                  >
                    <span
                      class="slds-truncate"
                      title="(905) 555-1212"
                    >
                      (905) 555-1212
                    </span>
                  </span>
                </span>
            </lightning-base-combobox-item>
          </li>
        </ul>
        <ul
          aria-label="Group 2"
          role="group"
        >
          <li
            class="slds-listbox__item"
            role="presentation"
          >
            <div
              class="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
              role="presentation"
            >
              <h3
                class="slds-text-title_caps"
                role="presentation"
                title="Group 2"
              >
                Group 2
              </h3>
            </div>
          </li>
          <li
            class="slds-listbox__item"
            role="presentation"
          >
            <lightning-base-combobox-item
              aria-selected="true"
              class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity slds-has-focus"
              data-item-id="input-77-5"
              data-value="accountGlobalMedia"
              id="input-77-5-77"
              role="option"
            >
              #shadow-root(open)
                <span
                  class="slds-media__figure"
                >
                  <lightning-icon
                    class="slds-icon-standard-account slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon_small"
                            data-key="account"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </span>
                <span
                  class="slds-media__body"
                >
                  <span
                    class="slds-listbox__option-text slds-listbox__option-text_entity"
                  >
                    <span
                      class="slds-truncate"
                      title="Global Media"
                    >
                      Global Media
                    </span>
                  </span>
                  <span
                    class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                  >
                    <span
                      class="slds-truncate"
                      title="(905) 555-1212"
                    >
                      (905) 555-1212
                    </span>
                  </span>
                </span>
            </lightning-base-combobox-item>
          </li>
          <li
            class="slds-listbox__item"
            role="presentation"
          >
            <lightning-base-combobox-item
              aria-selected="false"
              class="slds-media slds-listbox__option slds-media_center slds-media_small slds-listbox__option_plain"
              data-item-id="input-77-6"
              data-value="actionSearchAdvanced"
              id="input-77-6-77"
              role="option"
            >
              #shadow-root(open)
                <span
                  class="slds-media__figure slds-listbox__option-icon"
                >
                  <lightning-icon
                    class="slds-icon-utility-search slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon-text-default slds-icon_x-small"
                            data-key="search"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </span>
                <span
                  class="slds-media__body"
                >
                  <span
                    class="slds-truncate"
                    title="Advanced Search..."
                  >
                    Advanced Search...
                  </span>
                </span>
            </lightning-base-combobox-item>
          </li>
          <li
            class="slds-listbox__item"
            role="presentation"
          >
            <lightning-base-combobox-item
              aria-selected="false"
              class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
              data-item-id="input-77-7"
              data-value="accountGlobalMedia"
              id="input-77-7-77"
              role="option"
            >
              #shadow-root(open)
                <span
                  class="slds-media__figure"
                >
                  <lightning-icon
                    class="slds-icon-standard-account slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon_small"
                            data-key="account"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </span>
                <span
                  class="slds-media__body"
                >
                  <span
                    class="slds-listbox__option-text slds-listbox__option-text_entity"
                  >
                    <span
                      class="slds-truncate"
                      title="Global Media"
                    >
                      Global Media
                    </span>
                  </span>
                  <span
                    class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                  >
                    <span
                      class="slds-truncate"
                      title="(905) 555-1212"
                    >
                      (905) 555-1212
                    </span>
                  </span>
                </span>
            </lightning-base-combobox-item>
          </li>
          <li
            class="slds-listbox__item"
            role="presentation"
          >
            <lightning-base-combobox-item
              aria-selected="false"
              class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
              data-item-id="input-77-8"
              data-value="accountGlobalMedia"
              id="input-77-8-77"
              role="option"
            >
              #shadow-root(open)
                <span
                  class="slds-media__figure"
                >
                  <lightning-icon
                    class="slds-icon-standard-account slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon_small"
                            data-key="account"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </span>
                <span
                  class="slds-media__body"
                >
                  <span
                    class="slds-listbox__option-text slds-listbox__option-text_entity"
                  >
                    <span
                      class="slds-truncate"
                      title="Global Media"
                    >
                      Global Media
                    </span>
                  </span>
                  <span
                    class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                  >
                    <span
                      class="slds-truncate"
                      title="(905) 555-1212"
                    >
                      (905) 555-1212
                    </span>
                  </span>
                </span>
            </lightning-base-combobox-item>
          </li>
        </ul>
      </div>
    </div>
</lightning-base-combobox>
`;
